# sp_vision_25

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  autostart.sh  autostart1.sh  commands.txt  docker_run.sh  plot_armor.xml  plot_buff.xml  readme.md  split_vedio.cpp  watchdog.sh  zip_changed.sh
.cache/clangd/index/: CameraApi.h.54A5B385C4AD0385.idx  CameraDefine.h.81BD8359399215AE.idx  CameraParams.h.85E5C31985828526.idx  CameraStatus.h.7AD0FD56075159D8.idx  MvCameraControl.h.07580D63735A773E.idx  MvErrorDefine.h.BB8D0AEEA1E9C73B.idx  MvISPErrorDefine.h.C8C7EFE2A4815AA4.idx  MvObsoleteInterfaces.h.BA6D693AE65161DE.idx  ObsoleteCamParams.h.A660DCF59661F902.idx  PixelType.h.940D15B3D2A56902.idx  admm.cpp.E384FBF8D189CBCD.idx  admm.hpp.21D4E0BFCBB3DB64.idx  aimer.cpp.64956AF65728497C.idx  aimer.hpp.4A862C5FD1621446.idx  armor.cpp.757B9E09F43DC120.idx  armor.hpp.814A888A2FC4CE25.idx  auto_aim_debug_mpc.cpp.1A123825AFB6F410.idx  auto_aim_test.cpp.C4FAD29F03D5692C.idx  auto_buff_debug.cpp.A3FBA62288398CD3.idx  auto_buff_debug_mpc.cpp.A56C26E79B427EC7.idx  auto_buff_test.cpp.56B2940F6BCBE98A.idx  buff_aimer.cpp.59AA8E7D7E75E8B6.idx  buff_aimer.hpp.481D807201FAAF77.idx  buff_detector.cpp.5BDD3D37F9C47741.idx  buff_detector.hpp.949AF6CB811C8E4D.idx  buff_solver.cpp.2BA210AA4AA95C06.idx  buff_type.cpp.EA0B3379E90C8853.idx  (+132 more)
.devcontainer/: devcontainer.json
assets/: my_buff.onnx  triangles_24.csv  vertices_24.csv
assets/2ns_int8_openvino_model/: 2ns_int8.xml
assets/2ns_int8_openvino_model2/: 2ns_int8.xml
configs/: ascento.yaml  boomerang.yaml  calibration.yaml  calibration_dog.yaml  calibration_fric.yaml  calibration_gas.yaml  camera.yaml  dart.yaml  example.yaml  handeye.yaml  hero-24.yaml  hero-25.yaml  hero-25_dog.yaml  hero-25_fric.yaml  hero-25_gas.yaml  hero.yaml  infantry4.yaml  points.csv  radar.yaml  sentry.yaml  standard.yaml  standard3.yaml  standard4.yaml  standard5.yaml  standard_swerve.yaml
examples/: auto_aim_test.cpp  auto_buff_test.cpp  camera_test.cpp  capture.cpp  capture_video.cpp  cboard_test.cpp  control_to_fire.cpp  fast_recorder.cpp  find_lightspot_example.cpp  fix_video.cpp  split_vedio.cpp  test.cpp
examples/old/: cboard_tx_test.cpp  recorder_test.cpp  verify_handeye_calib.cpp
io/: CMakeLists.txt  camera.cpp  cboard.cpp  cboard.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/mindvision/: mindvision.cpp
io/ros2/: ros2.cpp  ros2.hpp  subscribe2location.cpp  subscribe2location.hpp  visualizer.cpp  visualizer.hpp  viz_node.cpp  viz_node.hpp
src/: auto_aim_debug.cpp  auto_aim_thread_debug.cpp  auto_buff_debug.cpp  dart.cpp  dart_debug.cpp  hanging_shooting_with_lidar.cpp  hero.cpp  hero_combine.cpp  hero_combine_debug.cpp  hero_mt.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  radar.cpp  standard.cpp  temp.cpp
tasks/: h_solver.cpp  hanging_shooter.cpp  hanging_shooter.hpp  pipe.hpp
tasks/auto_aim/: Boomeranger.cpp  Boomeranger.hpp  CMakeLists.txt  aimer.cpp  aimer.hpp  armor.cpp  armor.hpp  auto_shoot_aimer.cpp  auto_shoot_aimer.hpp  classifier.cpp  classifier.hpp  detector.cpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo.cpp  yolo.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_base/: CMakeLists.txt  hanging_shooter.cpp  hanging_shooter.hpp
tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp  buff_aimer.hpp  buff_detector.cpp  buff_detector.hpp  buff_solver.cpp  buff_solver.hpp  buff_target.cpp  buff_target.hpp  buff_type.cpp  buff_type.hpp  yolov8kp.cpp  yolov8kp.hpp
tasks/auto_dart/: dart_detector.cpp  dart_detector.hpp
tasks/auto_outpost/: CMakeLists.txt  command_executor.cpp  command_executor.hpp  shooter.cpp  shooter.hpp
tasks/mono_loc/: CMakeLists.txt  arena.cpp  arena.hpp  locator.hpp  ray.hpp  robot_detector.hpp  triangle.hpp
tasks/omniperception/: decider.cpp  perceptron.cpp
tasks/radar/: CMakeLists.txt  arena.cpp  arena.hpp  locator.hpp  ray.hpp  triangle.hpp
tests/: camera_thread_test.cpp  communicate_test.cpp  find_lightspot_test.cpp  find_lightspot_test_camera.cpp  gimbal_response_test.cpp  handeye_test.cpp  hanging_shooting_example.cpp  hanging_shooting_with_lidar.cpp  locator_test.cpp  robot_detect_test.cpp  ros2_test.cpp  shooting_angle_test.cpp  subscribe_test.cpp  triangle_test.cpp  viz_test.cpp  zero_point_test.cpp
tools/: CMakeLists.txt  extended_kalman_filter.cpp  extended_kalman_filter.hpp  img_tools.cpp  img_tools.hpp  math_tools.cpp  math_tools.hpp  thread_pool.hpp  thread_safe_queue.hpp  trajectory.cpp  trajectory.hpp
(+13 files in other folders)
